# GuiLite

./: .gitignore  GuiLite.cpp  GuiLite.h  GuiLite.uvprojx  GuiLite.vcxproj  README.md  README_zh.md
core/: core.vcxproj  display.cpp  surface.cpp
core/adapter/: audio_win.cpp
core/core_include/: surface.h
core/src/: surface.cpp  wave_buffer.cpp  wave_ctrl.cpp  word.cpp
core/src/adapter/: api_linux.cpp  api_none.cpp
doc/: CharityTracker.md  CodeWalkthrough-cn.md  HowLayoutWork.md  HowToWork-cn.md
gui/: gui.vcxproj
gui/src/: my_resource.cpp
include/core_include/: theme.h
include/widgets_include/: button.h  dialog.h  list_box.h  table.h
src/core/: bitmap.cpp  wnd.cpp
src/widgets/: dialog.cpp
widgets/: gesture.cpp  keyboard.cpp  slide_group.cpp  spinbox.cpp
widgets_include/: slide_group.h
workspace/: .sync.sh  CMakeLists.txt  GuiLite.vcxproj  sync_build.bat
workspace/core/: bitmap.cpp  display.cpp  theme.cpp  wnd.cpp  word.cpp
workspace/core/adapter/: api_unknow.cpp
workspace/core_include/: bitmap.h  display.h  wnd.h  word.h
workspace/include/: GuiLite.h
workspace/include/core_include/: display.h
workspace/include/widgets_include/: keyboard.h
workspace/src/core/: display.cpp  theme.cpp  word.cpp
workspace/src/core/adapter/: api_win.cpp
workspace/src/widgets/: button.cpp  edit.cpp  keyboard.cpp  label.cpp  list_box.cpp  slide_group.cpp  spinbox.cpp  table.cpp  wave_buffer.cpp  wave_ctrl.cpp
workspace/widgets/: button.cpp  dialog.cpp  edit.cpp  keyboard.cpp  label.cpp  list_box.cpp  slide_group.cpp  spinbox.cpp  table.cpp  wave_buffer.cpp  wave_ctrl.cpp
workspace/widgets_include/: edit.h  label.h  slide_group.h  spinbox.h  wave_buffer.h  wave_ctrl.h
